--- a/src/Sandbox/wwwroot/index.html
+++ b/src/Sandbox/wwwroot/index.html
@@ -27,13 +27,16 @@
   <script src="/bower_components/jquery/dist/jquery.js"></script>
   <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
   <script src="/bower_components/swiper/dist/js/swiper.js"></script>
+  <script src="/bower_components/underscore/underscore.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-animate/angular-animate.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <!-- endbower -->
 
   <script src="/js/app.js"></script>
-  <script src="/js/router.js"></script>
+  <script src="/js/run.js"></script>
+  <script src="/js/constant.js"></script>
+  <script src="/js/config.js"></script>
 
   <!-- inject:js-modules -->
   <script src="/js/services/fm-authtoken-factory.js"></script>
