Switched out SwiperSlider for Owl.Carousel2

--- a/src/Sandbox/client/src/index.html
+++ b/src/Sandbox/client/src/index.html
@@ -26,7 +26,7 @@
   <!-- bower:js -->
   <script src="/bower_components/jquery/dist/jquery.js"></script>
   <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-  <script src="/bower_components/swiper/dist/js/swiper.js"></script>
+  <script src="/bower_components/owl-carousel2/dist/owl.carousel.js"></script>
   <script src="/bower_components/underscore/underscore.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-animate/angular-animate.js"></script>
@@ -44,20 +44,20 @@
   <script src="/js/services/fm-navlinks-service.js"></script>
   <script src="/js/services/fm-news-service.js"></script>
   <script src="/js/services/fm-utility-functions-factory.js"></script>
-  <script src="/js/controllers/fm-funds-controller/fm-funds-controller.js"></script>
-  <script src="/js/controllers/fm-home-controller/fm-home-controller.js"></script>
-  <script src="/js/controllers/fm-market-controller/fm-market-controller.js"></script>
-  <script src="/js/controllers/fm-register-controller/fm-register-controller.js"></script>
-  <script src="/js/controllers/fm-news-controller/fm-news-controller.js"></script>
-  <script src="/js/controllers/fm-single-newspost-controller/fm-single-newspost-controller.js"></script>
-  <script src="/js/directives/fm-footer-directive/fm-footer-directive.js"></script>
   <script src="/js/directives/fm-bulletin-slider-directive/fm-bulletin-slider-directive.js"></script>
+  <script src="/js/directives/fm-footer-directive/fm-footer-directive.js"></script>
   <script src="/js/directives/fm-fund-gallery-directive/fm-fund-gallery-directive.js"></script>
   <script src="/js/directives/fm-hero-directive/fm-hero-directive.js"></script>
+  <script src="/js/directives/fm-market-map-directive/fm-market-map-directive.js"></script>
   <script src="/js/directives/fm-market-overview-directive/fm-market-overview-directive.js"></script>
   <script src="/js/directives/fm-navbar-directive/fm-navbar-directive.js"></script>
   <script src="/js/directives/fm-newsfeed-directive/fm-newsfeed-directive.js"></script>
-  <script src="/js/directives/fm-market-map-directive/fm-market-map-directive.js"></script>
+  <script src="/js/controllers/fm-funds-controller/fm-funds-controller.js"></script>
+  <script src="/js/controllers/fm-home-controller/fm-home-controller.js"></script>
+  <script src="/js/controllers/fm-market-controller/fm-market-controller.js"></script>
+  <script src="/js/controllers/fm-news-controller/fm-news-controller.js"></script>
+  <script src="/js/controllers/fm-single-newspost-controller/fm-single-newspost-controller.js"></script>
+  <script src="/js/controllers/fm-register-controller/fm-register-controller.js"></script>
   <!-- endinject -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
