Page title now displays name of current state

--- a/src/Sandbox/client/src/index.html
+++ b/src/Sandbox/client/src/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Sandbox</title>
+      <title ng-bind="($title || 'Hem') + ' - Sandbox'">Sandbox</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,6 +31,7 @@
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-animate/angular-animate.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/bower_components/angular-ui-router-title/angular-ui-router-title.js"></script>
   <!-- endbower -->
 
   <script src="/js/app.js"></script>
@@ -44,20 +45,20 @@
   <script src="/js/services/fm-navlinks-service.js"></script>
   <script src="/js/services/fm-news-service.js"></script>
   <script src="/js/services/fm-utility-functions-factory.js"></script>
+  <script src="/js/controllers/fm-funds-controller/fm-funds-controller.js"></script>
+  <script src="/js/controllers/fm-home-controller/fm-home-controller.js"></script>
+  <script src="/js/controllers/fm-news-controller/fm-news-controller.js"></script>
+  <script src="/js/controllers/fm-register-controller/fm-register-controller.js"></script>
+  <script src="/js/controllers/fm-single-newspost-controller/fm-single-newspost-controller.js"></script>
   <script src="/js/directives/fm-bulletin-slider-directive/fm-bulletin-slider-directive.js"></script>
-  <script src="/js/directives/fm-footer-directive/fm-footer-directive.js"></script>
   <script src="/js/directives/fm-fund-gallery-directive/fm-fund-gallery-directive.js"></script>
-  <script src="/js/directives/fm-hero-directive/fm-hero-directive.js"></script>
   <script src="/js/directives/fm-market-map-directive/fm-market-map-directive.js"></script>
   <script src="/js/directives/fm-market-overview-directive/fm-market-overview-directive.js"></script>
   <script src="/js/directives/fm-navbar-directive/fm-navbar-directive.js"></script>
   <script src="/js/directives/fm-newsfeed-directive/fm-newsfeed-directive.js"></script>
-  <script src="/js/controllers/fm-funds-controller/fm-funds-controller.js"></script>
-  <script src="/js/controllers/fm-home-controller/fm-home-controller.js"></script>
+  <script src="/js/directives/fm-hero-directive/fm-hero-directive.js"></script>
   <script src="/js/controllers/fm-market-controller/fm-market-controller.js"></script>
-  <script src="/js/controllers/fm-news-controller/fm-news-controller.js"></script>
-  <script src="/js/controllers/fm-single-newspost-controller/fm-single-newspost-controller.js"></script>
-  <script src="/js/controllers/fm-register-controller/fm-register-controller.js"></script>
+  <script src="/js/directives/fm-footer-directive/fm-footer-directive.js"></script>
   <!-- endinject -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
