--- a/src/Sandbox/wwwroot/index.html
+++ b/src/Sandbox/wwwroot/index.html
@@ -28,6 +28,9 @@
   <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
   <script src="/bower_components/owl-carousel2/dist/owl.carousel.js"></script>
   <script src="/bower_components/underscore/underscore.js"></script>
+  <script src="/bower_components/highcharts/highcharts.js"></script>
+  <script src="/bower_components/highcharts/highcharts-more.js"></script>
+  <script src="/bower_components/highcharts/modules/exporting.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-animate/angular-animate.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -60,6 +63,7 @@
   <script src="/js/directives/fm-market-overview-directive/fm-market-overview-directive.js"></script>
   <script src="/js/directives/fm-navbar-directive/fm-navbar-directive.js"></script>
   <script src="/js/directives/fm-newsfeed-directive/fm-newsfeed-directive.js"></script>
+  <script src="/js/directives/fm-step-progressbar/fm-step-progressbar-directive.js"></script>
   <!-- endinject -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
